# rss-generator

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
rss_generator/: __init__.py  cli.py  common.py  parsers.py  sites.py
rss_generator/templates/: rss_feed.xml
tests/: conftest.py  test_cli.py  test_common.py  test_parsers.py
tests/fixtures/: newalbumreleases_metal.html
